--- a/skincare.html
+++ b/skincare.html
@@ -43,10 +43,15 @@
         button {
             background-color: rgb(71, 210, 71);
             color: white;
+            cursor: pointer;
         }
         img {
             max-width: 75%;
             height: 250px;
+            display: block;
+             margin: 20px auto;
+             border-radius: 10px;
+             box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
         }
         footer {
             text-align: center;
