--- a/about.html
+++ b/about.html
@@ -20,6 +20,10 @@
         img {
             max-width: 10%;
             height: auto;
+            display: block;
+            margin: 20px auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
         }
         section {
             padding: 20px;
