--- a/beranda.html
+++ b/beranda.html
@@ -14,6 +14,10 @@
         img {
             max-width: 34%;
             height: auto;
+            display: block;
+            margin: 20px auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
         }
         header {
             background-color: #ff66b2;
