--- a/makeup.html
+++ b/makeup.html
@@ -44,10 +44,15 @@
         img {
             max-width: 65%;
             height: 200px;
+            display: block;
+            margin: 20px auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
         }
         button {
             background-color: rgb(71, 210, 71);
             color: white;
+            cursor: pointer;
         }
         footer {
             text-align: center;
